2003-01-29  Bastien Nocera  <hadess@hadess.net>

	* README: updated

2003-01-29  Bastien Nocera  <hadess@hadess.net>

	* configure.in: 0.90.0

2003-01-29  Bastien Nocera  <hadess@hadess.net>

	* src/gtk-xine.c: (generate_mouse_event): fix typo that prevented the
	mouse clicks from being passed onto xine (Closes: #104598)

2003-01-29  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (on_window_key_press_event): If we have modifiers, and
	either Ctrl, Mod1 (Alt), or any of Mod3 to Mod5 (Mod2 is num-lock...)
	are pressed, we let Gtk+ handle the key (Closes: #104675)

2003-01-29  Bastien Nocera  <hadess@hadess.net>

	* src/gtk-xine.c: (gtk_xine_get_current_frame): really fix the
	screenshot aspect bug (it only worked because the test video was
	square, haha) (Closes: #104605)

2003-01-28  Bastien Nocera  <hadess@hadess.net>

	* src/gtk-xine.c: (xine_thread), (gtk_xine_size_allocate): remove some
	debug, and unused variables

2003-01-28  Bastien Nocera  <hadess@hadess.net>

	* src/gtk-xine.c: (gtk_xine_get_current_frame): fix screenshot's aspect
	ratio (Closes: #104605)
	* src/totem.c: (on_window_key_press_event): we also process key presses
	when numlock or capslock are on

2003-01-25  Bastien Nocera  <hadess@hadess.net>

	* src/gtk-xine.c: (gtk_xine_class_init), (load_config_from_gconf),
	(gtk_xine_set_property), (gtk_xine_set_media_device),
	(gtk_xine_set_show_visuals):
	* src/gtk-xine.h:
	* src/totem.c: (on_checkbutton2_toggled),
	(totem_setup_preferences), (main): remove gconf dependency for the
	show visuals pref

2003-01-25  Bastien Nocera  <hadess@hadess.net>

	* src/gtk-xine.c: (gtk_xine_class_init), (load_config_from_gconf),
	(gtk_xine_realize), (gtk_xine_set_property),
	(gtk_xine_set_media_device), (gtk_xine_get_mrls):
	* src/gtk-xine.h:
	* src/totem.c: (on_combo_entry1_changed), (mediadev_changed_cb),
	(totem_setup_preferences): remove gconf dependency for the media
	device

2003-01-24  Bastien Nocera  <hadess@hadess.net>
