@@ -1,3 +1,7 @@
+2003-01-30  Bastien Nocera  <hadess@hadess.net>
+
+	* src/totem.c: (totem_action_handle_key): sort by alphabetical order
+
 2003-01-29  Bastien Nocera  <hadess@hadess.net>
 
 	* README: updated
